# ntfsprogs-plus

./: Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml
include/: Makefile.am
include/ntfs-3g/: attrib.h  device.h  index.h  inode.h  layout.h  lib_utils.h  mft.h  runlist.h  types.h  volume.h
libntfs-3g/: Makefile.am  acls.c  attrib.c  bitmap.c  bootsect.c  cache.c  compat.c  compress.c  debug.c  device.c  dir.c  efs.c  index.c  inode.c  ioctl.c  lcnalloc.c  lib_utils.c  logfile.c  logging.c  mft.c  misc.c  mst.c  reparse.c  runlist.c  security.c  unistr.c  unix_io.c  volume.c  win32_io.c  xattrs.c
ntfsprogs/: Makefile.am  ntfsck.c
src/: Makefile.am  attrdef.c  attrdef.h  cluster.c  cluster.h  list.h  mkntfs.c  ntfscat.h  ntfsck.c  ntfsclone.c  ntfscluster.c  ntfscluster.h  ntfscmp.c  ntfsdump_logfile.c  ntfsfix.c  ntfsinfo.c  ntfslabel.c  ntfsls.c  ntfsmove.c  ntfsmove.h  ntfsrecover.c  ntfsresize.c  ntfssecaudit.c  ntfsundelete.c  ntfsundelete.h  ntfsusermap.c  ntfswipe.c  ntfswipe.h  playlog.c  utils.c  utils.h
tests/: make_disk_corruption.sh  test_fsck.sh  time_result_make_graph.py
tests/attrlist_and_filename_corrupted/: ntfs.img.tar.xz
tests/corrupted_attrlist_and_has_wrong_seqno/: ntfs.img.tar.xz
tests/data_size_init_size_bigger_than_alloc_size_DATA_attr/: ntfs.img.tar.xz
tests/data_size_init_size_bigger_than_alloc_size_ia/: ntfs.img.tar.xz
tests/data_size_init_size_smaller_than_alloc_size_DATA_attr/: ntfs.img.tar.xz
tests/deep_depth_orphaned_files/: ntfs.img.tar.xz
tests/different_index_and_mft_flags/: ntfs.img.tar.xz
(+24 files in other folders)
